Fix vertical alignment between hiragana and Latin in site title
Split title into separate spans and use relative positioning
to align the Latin portion with the hiragana baseline.

--- a/css/blocks/_header.scss
+++ b/css/blocks/_header.scss
@@ -9,7 +9,6 @@
   src: url('../fonts/ProjectPaintballDisplay.ttf') format('truetype');
   unicode-range: U+0000-007F; // ASCII (英数字・記号)
   size-adjust: 115%;
-  ascent-override: 90%;
 }
 
 .header {
@@ -40,6 +39,11 @@
       &:hover {
         color: inherit;
       }
+    }
+
+    &-en {
+      position: relative;
+      top: -3px;
     }
   }
 
